ensemblgenomes_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: ensemblgenomes-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      ensembl.web.app.name: ensemblgenomes
  template:
    metadata:
      labels:
        ensembl.web.app.name: ensemblgenomes
    spec:
      containers:
      - name: ensemblgenomes
        image: <DOCKER_IMAGE>
        ports:
        - containerPort: 80
        imagePullPolicy: Always
      imagePullSecrets:
        - name: ensemblweb-pull-secre
