ensemblgenomes_service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  ensemblgenomes-svc
  labels:
     ensembl.web.app.name: ensemblgenomes
spec:
  selector:
     ensembl.web.app.name: ensemblgenomes
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
